Subiendo cambios de fuentes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </p>
         </div>
         <div class="info-adicional">
-            <p class="contacto">Contacto: davidjosueaq2004@gmail.com</p>
+            <p class="contacto">Contacto: davidjosueaq2004@gmail.com prueba de actualizacion ghpages</p>
             <div class="redes-sociales">
                 <a href="#" class="icono"><img
                         src="https://e7.pngegg.com/pngimages/175/452/png-clipart-facebook-logo-facebook-icon-logo-facebook-icon-blue-text.png"
