Arreglando problemas de posicionamiento en moviles y agregando links de redes

--- a/index.html
+++ b/index.html
@@ -20,29 +20,33 @@
             <h1 class="nombre">David Quiñonez <small class="edad">|18|</small></h1>
             <p class="profesion">Desarrollador Web</p>
         </div>
+        <div class="img-pais">
+            <img src="https://us.123rf.com/450wm/fredex8/fredex81604/fredex8160400305/55620231-insignia-de-la-bandera-de-guatemala-guatemala-bandera-de-bot%C3%B3n-aislada-en-blanco.jpg"
+                alt="" class="pais">
+        </div>
         <div class="descripcion">
             <p>
                 ¡Hola! Soy David Josué André Quiñonez Zeta, un apasionado desarrollador web de 18 años de edad.
                 Mi objetivo es convertirme en un profesional
                 desarrollador web y adquirir experiencia en diseño de interfaces UI/UX. Estoy
-                comprometido a perfeccionar mis habilidades en el campo de desarrollo web, ademas de 
+                comprometido a perfeccionar mis habilidades en el campo de desarrollo web, ademas de
                 adquirir conocimientos en el diseño web con tecnologias como figma.
             </p>
         </div>
         <div class="info-adicional">
-            <p class="contacto">Contacto: davidjosueaq2004@gmail.com prueba de actualizacion ghpages</p>
+            <p class="contacto">Contacto: davidjosueaq2004@gmail.com </p>
             <div class="redes-sociales">
-                <a href="#" class="icono"><img
+                <a href="https://www.facebook.com/Davidq04/" class="icono" target="_blank"><img
                         src="https://e7.pngegg.com/pngimages/175/452/png-clipart-facebook-logo-facebook-icon-logo-facebook-icon-blue-text.png"
-                        alt="Facebook"></a>
-                <a href="#" class="icono"><img
+                        alt="Facebook" ></a>
+                <a href="https://www.instagram.com/davidq_04/" class="icono" target="_blank"><img
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
-                        alt="Instagram"></a>
-                <a href="#" class="icono"><img src="https://cdn-icons-png.flaticon.com/256/25/25231.png"
-                        alt="GitHub"></a>
-                <a href="#" class="icono"><img
+                        alt="Instagram" ></a>
+                <a href="https://github.com/DQuinonezDev" class="icono" target="_blank"><img src="https://cdn-icons-png.flaticon.com/256/25/25231.png"
+                        alt="GitHub" ></a>
+                <a href="https://www.linkedin.com/in/david-quinonez-dev/" class="icono" target="_blank"><img
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/LinkedIn_icon.svg/2048px-LinkedIn_icon.svg.png"
-                        alt="LinkedIn"></a>
+                        alt="LinkedIn" ></a>
             </div>
         </div>
     </section>
